-Adding Tween Data (WIP) -Commenting some out old files -Adding new funcionalities to Core like: separating Player from Sequence and giving posibility to any MonoBehaviour to play a UniTweenSequence

--- a/Editor/Funbites.UniTween.Editor.asmdef
+++ b/Editor/Funbites.UniTween.Editor.asmdef
@@ -1,6 +1,8 @@
 {
     "name": "Funbites.UniTween.Editor",
-    "references": [],
+    "references": [
+        "GUID:0d82c5b970e40a04e83181609e2617ff"
+    ],
     "includePlatforms": [
         "Editor"
     ],
