--- a/Runtime/Funbites.UniTween.asmdef
+++ b/Runtime/Funbites.UniTween.asmdef
@@ -1,3 +1,16 @@
-﻿{
-	"name": "Funbites.UniTween"
+{
+    "name": "Funbites.UniTween",
+    "references": [
+        "GUID:86fa5b828b1cbd24099e00754a5b5f3c",
+        "GUID:fa7ddc4d723f008409bbeeae3ee50095"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
