-Adding more tween data -Making assembly reference by name -Fixing some issues in editor -Adding the possibility to use the selected game object as the target of tween to speed up the process -Commenting out old tweens to allow the project to compile, but still needs these tweens to new system

--- a/Runtime/Funbites.UniTween.asmdef
+++ b/Runtime/Funbites.UniTween.asmdef
@@ -1,8 +1,8 @@
 {
     "name": "Funbites.UniTween",
     "references": [
-        "GUID:86fa5b828b1cbd24099e00754a5b5f3c",
-        "GUID:fa7ddc4d723f008409bbeeae3ee50095"
+        "Funbites.UnityUtils.Editor",
+        "DOTween.Modules"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
