-Starting a test environment -Creating a tween for time format in text

--- a/Runtime/Funbites.UniTween.asmdef
+++ b/Runtime/Funbites.UniTween.asmdef
@@ -2,7 +2,9 @@
     "name": "Funbites.UniTween",
     "references": [
         "Funbites.UnityUtils.Editor",
-        "DOTween.Modules"
+        "DOTween.Modules",
+        "Unity.TextMeshPro",
+        "Funbites.UnityUtils"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
